--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node server.js",
+    "start": "node seeds/index.js, node server.js",
     "watch": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
