--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
-    "start": "node seeds/index.js, node server.js",
+    "start":  "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
+    "heroku-postbuild": "node seeds/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
